@@ -1,15 +1,15 @@
 package it.unisannio.studenti.qualitag.service;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.any;
 
 import it.unisannio.studenti.qualitag.constants.TeamConstants;
 import it.unisannio.studenti.qualitag.dto.team.CompletedTeamCreateDto;
@@ -28,16 +28,15 @@ import it.unisannio.studenti.qualitag.repository.UserRepository;
 import it.unisannio.studenti.qualitag.security.model.CustomUserDetails;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import org.apache.coyote.BadRequestException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
@@ -73,12 +72,20 @@ public class TeamServiceTest {
   private TeamService teamService;
 
   private TeamCreateDto teamCreateDto;
-  private CompletedTeamCreateDto completedTeamCreateDto;
+  // private CompletedTeamCreateDto completedTeamCreateDto;
   private Team team;
+
   private Project project;
-  private User owner, user1, user2, user3;
+
+  private User owner;
+  private User user1;
+  private User user2;
+  private User user3;
+
   private Artifact artifact;
-  private Tag tag1, tag2;
+
+  private Tag tag1;
+  private Tag tag2;
 
   /**
    * Sets up the test environment.
@@ -86,56 +93,51 @@ public class TeamServiceTest {
   @BeforeEach
   void setUp() {
     MockitoAnnotations.openMocks(this);
-    //Initialize entities
-    team = new Team("teamName", "projectId",
-        123456789L, "teamDescription",
+    // Initialize entities
+    team = new Team("teamName", "projectId", Instant.now().toEpochMilli(), "teamDescription",
         new ArrayList<>(Arrays.asList("user1Id", "user2Id")));
     team.setTeamId("teamId");
 
-    project = new Project("projectName", "projectDescription",
-        0L, 0L, "ownerId", new ArrayList<>());
+    long creationDate = Instant.now().toEpochMilli();
+    long deadline = Instant.parse("2025-12-31T23:59:59Z").toEpochMilli();
+    project = new Project("projectName", "projectDescription", creationDate, deadline, "ownerId",
+        new ArrayList<>());
     project.setProjectId("projectId");
-    project.setUserIds(Arrays.asList("ownerId", "user1Id", "user2Id"));
-    owner = new User("username", "user@example.com",
-        "hashedPassword123", "John", "Doe");
+    project.setUserIds(Arrays.asList("ownerId", "user1Id", "user2Id", "user3Id"));
+    owner = new User("username", "user@example.com", "hashedPassword123", "John", "Doe");
     owner.setUserId("ownerId");
 
-    //additional users
-    user1 = new User("user1", "user1@example.com",
-        "password", "Jane", "Doe");
+    // additional users
+    user1 = new User("user1", "user1@example.com", "password", "Jane", "Doe");
     user1.setUserId("user1Id");
-    user1.setTeamIds(new ArrayList<>(Arrays.asList("teamId")));
-    user2 = new User("user2", "user2@example.com",
-        "password", "Alice", "Smith");
+    user1.setTeamIds(new ArrayList<>(List.of("teamId")));
+    user2 = new User("user2", "user2@example.com", "password", "Alice", "Smith");
     user2.setUserId("user2Id");
-    user2.setTeamIds(new ArrayList<>(Arrays.asList("teamId")));
-    user3 = new User("user3", "user3@example.com", "password",
-        "Bob", "Johnson");
+    user2.setTeamIds(new ArrayList<>(List.of("teamId")));
+    user3 = new User("user3", "user3@example.com", "password", "Bob", "Johnson");
     user3.setUserId("user3Id");
     user3.setTeamIds(new ArrayList<>());
 
-    //tags and artifacts
-    tag1 = new Tag("tag1Id", "tag1Name", "projectId");
+    // tags and artifacts
+    tag1 = new Tag("6744ba6c60e0564864250e89", "tag1Name", "projectId");
     tag1.setCreatedBy(user1.getUserId());
-    tag2 = new Tag("tag2Id", "tag2Name", "projectId");
+    tag2 = new Tag("6755b79afc22f97c06a34275", "tag2Name", "projectId");
     tag2.setCreatedBy(user2.getUserId());
 
-    artifact = new Artifact("artifactName",
-        "projectId", "teamId", "filePath");
+    artifact = new Artifact("artifactName", "projectId", "teamId", "filePath");
     artifact.setArtifactId("artifactId");
     artifact.setTags(new ArrayList<>(Arrays.asList("tagId1", "tagId2")));
 
-    //add artifact to team
-    team.setArtifactIds(Arrays.asList("artifactId"));
+    // add artifact to team
+    team.setArtifactIds(List.of("artifactId"));
 
-    //Initialize DTO
-    teamCreateDto = new TeamCreateDto("teamName", "teamDescription",
-        "projectId", new ArrayList<>(Arrays.asList("user1@example.com",
-        "user2@example.com")));
-    completedTeamCreateDto = new CompletedTeamCreateDto("teamName",
-        "projectId", 123456789L, "teamDescription",
-        Arrays.asList("user1", "user2")
-    );
+    // Initialize DTO
+    teamCreateDto = new TeamCreateDto("teamName", "teamDescription", "projectId",
+        new ArrayList<>(Arrays.asList("user1@example.com", "user2@example.com")));
+    // completedTeamCreateDto = new CompletedTeamCreateDto("teamName",
+    // "projectId", 123456789L, "teamDescription",
+    // Arrays.asList("user1", "user2")
+    // );
 
     // Mock SecurityContextHolder to provide an authenticated user
     Authentication authentication = mock(Authentication.class);
@@ -148,76 +150,77 @@ public class TeamServiceTest {
   }
 
   /**
-   * Tests a successful execution of the addTeam Method
+   * Tests a successful execution of the addTeam Method.
    */
   @Test
-  void testAddTeam_success() {
+  void testAddTeamsuccess() {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
     when(teamRepository.save(any(Team.class))).thenReturn(team);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByUserId("user2Id")).thenReturn(user2);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.CREATED, response.getStatusCode());
-    assertEquals("Team added successfully",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team added successfully.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where the TeamCreateDto is invalid
+   * Tests an execution of the addTeam method where the TeamCreateDto is invalid.
    */
   @Test
-  void testAddTeam_InvalidDto() {
+  void testAddTeamInvalidDto() {
     // Arrange
-    TeamCreateDto invalidDto = new TeamCreateDto("",
-        "", "", new ArrayList<>());
+    TeamCreateDto invalidDto = new TeamCreateDto("", "", "", new ArrayList<>());
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(invalidDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Invalid team data", ((Map<String, String>)
-        response.getBody()).get("msg"));
-
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Invalid team data.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where the project is not found
+   * Tests an execution of the addTeam method where the project is not found.
    *
    * @throws TeamValidationException if the project is not found
    */
   @Test
-  void testAddTeam_ProjectNotFound() throws TeamValidationException {
+  void testAddTeamProjectNotFound() throws TeamValidationException {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(null);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(null);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Project not found", ((Map<String, String>) response.getBody())
-        .get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Project not found.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where the user is not the project owner
+   * Tests an execution of the addTeam method where the user is not the project owner.
    *
    * @throws TeamValidationException if the user is not the project owner
    */
   @Test
-  void testAddTeam_UserNotProjectOwner() throws TeamValidationException {
+  void testAddTeamUserNotProjectOwner() throws TeamValidationException {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     project.setOwnerId("NotOwnerId");
 
@@ -226,185 +229,174 @@ public class TeamServiceTest {
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Only the project owner can create a team",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Only the project owner can create a team.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where the team name is too short
+   * Tests an execution of the addTeam method where the team name is too short.
    *
    * @throws TeamValidationException if the team name is too short
    */
   @Test
-  void testAddTeam_NameTooShort() throws TeamValidationException {
+  void testAddTeamNameTooShort() throws TeamValidationException {
     // Arrange
-    teamCreateDto = new TeamCreateDto("aa", "teamDescription",
-        "projectId", new ArrayList<>(Arrays.asList("user2@example.com",
-        "user3@example.com")));
+    teamCreateDto = new TeamCreateDto("aa", "teamDescription", "projectId",
+        new ArrayList<>(Arrays.asList("user2@example.com", "user3@example.com")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Team name is too short",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team name is too short.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * tests an execution of the addTeam method where the team name is too long
+   * tests an execution of the addTeam method where the team name is too long.
    *
    * @throws TeamValidationException if the team name is too long
    */
   @Test
-  void testAddTeam_NameTooLong() throws TeamValidationException {
+  void testAddTeamNameTooLong() throws TeamValidationException {
     // Arrange
-    teamCreateDto = new TeamCreateDto("teamNameIsTooLong",
-        "teamDescription", "projectId",
+    teamCreateDto = new TeamCreateDto("teamNameIsTooLong", "teamDescription", "projectId",
         new ArrayList<>(Arrays.asList("user2@example.com", "user3@example.com")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Team name is too long",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team name is too long.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where the owner email is in the list
+   * Tests an execution of the addTeam method where the owner email is in the list.
    *
    * @throws TeamValidationException if the owner email is in the list
    */
   @Test
-  void testAddTeam_OwnerEmailNotInList() throws TeamValidationException {
-    teamCreateDto = new TeamCreateDto("TeamName", "teamDescription",
-        "projectId",
-        new ArrayList<>(Arrays.asList("user@example.com", "user1@example.com",
-            "user2@example.com")));
+  void testAddTeamOwnerEmailNotInList() throws TeamValidationException {
+    teamCreateDto = new TeamCreateDto("TeamName", "teamDescription", "projectId", new ArrayList<>(
+        Arrays.asList("user@example.com", "user1@example.com", "user2@example.com")));
 
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Owner email must not be in the list",
-        ((Map<String, String>) response.getBody()).get("msg"));
-
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Owner email must not be in the list.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where the team has not enough users
+   * Tests an execution of the addTeam method where the team has not enough users.
    *
    * @throws TeamValidationException if the team has not enough users
    */
   @Test
-  void testAddTeam_NotEnoughUsers() throws TeamValidationException {
+  void testAddTeamNotEnoughUsers() throws TeamValidationException {
     // Arrange
-    teamCreateDto = new TeamCreateDto("TeamName", "teamDescription",
-        "projectId", new ArrayList<>(Arrays.asList("user2@example.com")));
+    teamCreateDto = new TeamCreateDto("TeamName", "teamDescription", "projectId",
+        new ArrayList<>(List.of(user2.getEmail())));
 
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("A team must have at least " + TeamConstants.MIN_TEAM_USERS
-            + " users",
-        ((Map<String, String>) response.getBody()).get("msg"));
-
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg",
+        "A team must have at least " + TeamConstants.MIN_TEAM_USERS + " users.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where the team has too many users
+   * Tests an execution of the addTeam method where the team has too many users.
    *
    * @throws TeamValidationException if the team has too many users
    */
   @Test
-  void testAddTeam_TooManyUsers() throws TeamValidationException {
-    //Creation of all the users
-    User user3 = new User("user3", "user3@example.com",
-        "password", "FirstName3", "LastName3");
+  void testAddTeamTooManyUsers() throws TeamValidationException {
+    // Creation of all the users
+    User user3 = new User("user3", "user3@example.com", "password", "FirstName3", "LastName3");
     user3.setUserId("user3Id");
 
-    User user4 = new User("user4", "user4@example.com",
-        "password", "FirstName4", "LastName4");
+    User user4 = new User("user4", "user4@example.com", "password", "FirstName4", "LastName4");
     user4.setUserId("user4Id");
 
-    User user5 = new User("user5", "user5@example.com",
-        "password", "FirstName5", "LastName5");
+    User user5 = new User("user5", "user5@example.com", "password", "FirstName5", "LastName5");
     user5.setUserId("user5Id");
 
-    User user6 = new User("user6", "user6@example.com",
-        "password", "FirstName6", "LastName6");
+    User user6 = new User("user6", "user6@example.com", "password", "FirstName6", "LastName6");
     user6.setUserId("user6Id");
 
-    User user7 = new User("user7", "user7@example.com",
-        "password", "FirstName7", "LastName7");
+    User user7 = new User("user7", "user7@example.com", "password", "FirstName7", "LastName7");
     user7.setUserId("user7Id");
 
-    User user8 = new User("user8", "user8@example.com",
-        "password", "FirstName8", "LastName8");
+    User user8 = new User("user8", "user8@example.com", "password", "FirstName8", "LastName8");
     user8.setUserId("user8Id");
 
-    User user9 = new User("user9", "user9@example.com",
-        "password", "FirstName9", "LastName9");
+    User user9 = new User("user9", "user9@example.com", "password", "FirstName9", "LastName9");
     user9.setUserId("user9Id");
 
-    User user10 = new User("user10", "user10@example.com",
-        "password", "FirstName10", "LastName10");
+    User user10 = new User("user10", "user10@example.com", "password", "FirstName10", "LastName10");
     user10.setUserId("user10Id");
 
-    User user11 = new User("user11", "user11@example.com",
-        "password", "FirstName11", "LastName11");
+    User user11 = new User("user11", "user11@example.com", "password", "FirstName11", "LastName11");
     user11.setUserId("user11Id");
 
     // Arrange
-    teamCreateDto = new TeamCreateDto("TeamName", "teamDescription",
-        "projectId", new ArrayList<>(Arrays.asList("user1@example.com", "user2@example.com"
-        , "user3@example.com", "user4@example.com", "user5@example.com", "user6@example.com"
-        , "user7@example.com", "user8@example.com", "user9@example.com", "user10@example.com",
-        "user11@example.com")));
+    teamCreateDto = new TeamCreateDto("TeamName", "teamDescription", "projectId",
+        new ArrayList<>(Arrays.asList("user1@example.com", "user2@example.com", "user3@example.com",
+            "user4@example.com", "user5@example.com", "user6@example.com", "user7@example.com",
+            "user8@example.com", "user9@example.com", "user10@example.com", "user11@example.com")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByEmail("user3@example.com")).thenReturn(user3);
-    when(userRepository.findByEmail("user4@example.com")).thenReturn(user4);
-    when(userRepository.findByEmail("user5@example.com")).thenReturn(user5);
-    when(userRepository.findByEmail("user6@example.com")).thenReturn(user6);
-    when(userRepository.findByEmail("user7@example.com")).thenReturn(user7);
-    when(userRepository.findByEmail("user8@example.com")).thenReturn(user8);
-    when(userRepository.findByEmail("user9@example.com")).thenReturn(user9);
-    when(userRepository.findByEmail("user10@example.com")).thenReturn(user10);
-    when(userRepository.findByEmail("user11@example.com")).thenReturn(user11);
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByUserId("user2Id")).thenReturn(user2);
-    when(userRepository.findByUserId("user3Id")).thenReturn(user3);
-    when(userRepository.findByUserId("user4Id")).thenReturn(user4);
-    when(userRepository.findByUserId("user5Id")).thenReturn(user5);
-    when(userRepository.findByUserId("user6Id")).thenReturn(user6);
-    when(userRepository.findByUserId("user7Id")).thenReturn(user7);
-    when(userRepository.findByUserId("user8Id")).thenReturn(user8);
-    when(userRepository.findByUserId("user9Id")).thenReturn(user9);
-    when(userRepository.findByUserId("user10Id")).thenReturn(user10);
-    when(userRepository.findByUserId("user11Id")).thenReturn(user11);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByEmail(user3.getEmail())).thenReturn(user3);
+    when(userRepository.findByEmail(user4.getEmail())).thenReturn(user4);
+    when(userRepository.findByEmail(user5.getEmail())).thenReturn(user5);
+    when(userRepository.findByEmail(user6.getEmail())).thenReturn(user6);
+    when(userRepository.findByEmail(user7.getEmail())).thenReturn(user7);
+    when(userRepository.findByEmail(user8.getEmail())).thenReturn(user8);
+    when(userRepository.findByEmail(user9.getEmail())).thenReturn(user9);
+    when(userRepository.findByEmail(user10.getEmail())).thenReturn(user10);
+    when(userRepository.findByEmail(user11.getEmail())).thenReturn(user11);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
+    when(userRepository.findByUserId(user3.getUserId())).thenReturn(user3);
+    when(userRepository.findByUserId(user4.getUserId())).thenReturn(user4);
+    when(userRepository.findByUserId(user5.getUserId())).thenReturn(user5);
+    when(userRepository.findByUserId(user6.getUserId())).thenReturn(user6);
+    when(userRepository.findByUserId(user7.getUserId())).thenReturn(user7);
+    when(userRepository.findByUserId(user8.getUserId())).thenReturn(user8);
+    when(userRepository.findByUserId(user9.getUserId())).thenReturn(user9);
+    when(userRepository.findByUserId(user10.getUserId())).thenReturn(user10);
+    when(userRepository.findByUserId(user11.getUserId())).thenReturn(user11);
 
     project.setUserIds(Arrays.asList("ownerId", "user1Id", "user2Id", "user3Id", "user4Id",
         "user5Id", "user6Id", "user7Id", "user8Id", "user9Id", "user10Id", "user11Id"));
@@ -414,84 +406,87 @@ public class TeamServiceTest {
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("A team cannot have more than " +
-            TeamConstants.MAX_TEAM_USERS + " users",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg",
+        "A team cannot have more than " + TeamConstants.MAX_TEAM_USERS + " users.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where there is an empty email in the list
+   * Tests an execution of the addTeam method where there is an empty email in the list.
    *
    * @throws TeamValidationException if there is an empty email in the list
    */
   @Test
-  void testAddTeam_EmptyEmail() throws TeamValidationException {
+  void testAddTeamEmptyEmail() throws TeamValidationException {
     // Arrange
-    teamCreateDto = new TeamCreateDto("TeamName", "teamDescription",
-        "projectId", new ArrayList<>(Arrays.asList("", "user2@example.come")));
+    teamCreateDto = new TeamCreateDto("TeamName", "teamDescription", "projectId",
+        new ArrayList<>(Arrays.asList("", "user2@example.come")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("There is an empty email in the list. Remove it.",
-        ((Map<String, String>) response.getBody()).get("msg"));
-
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "There is an empty email in the list. Remove it.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where there is a null email in the list
+   * Tests an execution of the addTeam method where there is a null email in the list.
    */
   @Test
-  void testAddTeam_NullEmail() {
+  void testAddTeamNullEmail() {
     // Arrange
-    teamCreateDto = new TeamCreateDto("TeamName", "teamDescription",
-        "projectId", new ArrayList<>(Arrays.asList(null, "user2@example.come")));
+    teamCreateDto = new TeamCreateDto("TeamName", "teamDescription", "projectId",
+        new ArrayList<>(Arrays.asList(null, "user2@example.come")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("There is an empty email in the list. Remove it.",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "There is an empty email in the list. Remove it.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where the email does not exist
+   * Tests an execution of the addTeam method where the email does not exist.
    *
    * @throws TeamValidationException if the email does not exist
    */
   @Test
-  void addTeam_EmailDoesNotExist() throws TeamValidationException {
+  void addTeamEmailDoesNotExist() throws TeamValidationException {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(null);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(null);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("User with email user1@example.com does not exist",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with email " + user1.getEmail() + " does not exist.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where the team description is too long
+   * Tests an execution of the addTeam method where the team description is too long.
    *
    * @throws TeamValidationException if the team description is too long
    */
   @Test
-  void addTeam_TeamDescriptionTooLong() throws TeamValidationException {
+  void addTeamTeamDescriptionTooLong() throws TeamValidationException {
     // Arrange
     teamCreateDto = new TeamCreateDto("teamName",
         "This is a very long team description that is intentionally written to"
@@ -501,123 +496,107 @@ public class TeamServiceTest {
             + "By including a variety of words and phrases, we can make sure that the description "
             + "is sufficiently lengthy to trigger the validation error. This should be more than "
             + "enough characters to exceed the limit.",
-        "projectId", new ArrayList<>(Arrays.asList("user1@example.com",
-        "user2@example.com")));
+        "projectId", new ArrayList<>(Arrays.asList("user1@example.com", "user2@example.com")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByUserId("user2Id")).thenReturn(user2);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user2);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Team description is too long. Max is "
-            + TeamConstants.MAX_TEAM_DESCRIPTION_LENGTH + " "
-            + "characters including whitespaces.",
-        ((Map<String, String>) response.getBody()).get("msg"));
-
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team description is too long. Max is "
+        + TeamConstants.MAX_TEAM_DESCRIPTION_LENGTH + " characters including whitespaces.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the addTeam method where the team description is empty
+   * Tests an execution of the addTeam method where the team description is empty.
    *
-   * @throws NoSuchMethodException  if the validateTeam method is not found
+   * @throws NoSuchMethodException if the validateTeam method is not found
    * @throws InvocationTargetException if the validateTeam method cannot be invoked
-   * @throws IllegalAccessException  if the validateTeam method cannot be accessed
+   * @throws IllegalAccessException if the validateTeam method cannot be accessed
    */
   @Test
-  void testAddTeam_TeamDescriptionEmpty()
+  void testAddTeamTeamDescriptionEmpty()
       throws NoSuchMethodException, InvocationTargetException, IllegalAccessException {
-    //Arrange
-    teamCreateDto = new TeamCreateDto("teamName", null,
-        "projectId", new ArrayList<>(Arrays.asList("user1@example.com",
-        "user2@example.com")));
+    // Arrange
+    teamCreateDto = new TeamCreateDto("teamName", null, "projectId",
+        new ArrayList<>(Arrays.asList("user1@example.com", "user2@example.com")));
 
-    //Arrange: Set up mock objects and spy on the service class
+    // Arrange: Set up mock objects and spy on the service class
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
+
     TeamService teamServiceSpy = Mockito.spy(teamService);
-
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByUserId("user2Id")).thenReturn(user2);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
-    //Use reflection to invoke the private method 'validateTeam'
-    Method validateTeamMethod = TeamService.class.getDeclaredMethod("validateTeam",
-        TeamCreateDto.class);
+    // Use reflection to invoke the private method 'validateTeam'
+    Method validateTeamMethod =
+        TeamService.class.getDeclaredMethod("validateTeam", TeamCreateDto.class);
     validateTeamMethod.setAccessible(true); // Make the method accessible
 
-    CompletedTeamCreateDto result = (CompletedTeamCreateDto) validateTeamMethod.
-        invoke(teamServiceSpy, teamCreateDto);
+    CompletedTeamCreateDto result =
+        (CompletedTeamCreateDto) validateTeamMethod.invoke(teamServiceSpy, teamCreateDto);
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.CREATED, response.getStatusCode());
     assertEquals("Hi, we are team teamName!", result.teamDescription());
   }
 
-  //TODO: Add test for addTeam method where the team is null
-
   /**
-   * Tests an execution of the addTeam method where the team is null
-   *
-   * @throws TeamValidationException if the team is null
-   */
-  @Test
-  void testAddTeam_NullTeam() throws TeamValidationException {
-  }
-
-  //TODO: Add test for addTeam method where user is null
-  //TODO: Add test for addTeam method where user is empty
-
-  /**
-   * Tests an execution of the addTeam method where the user does not exist in the database
+   * Tests an execution of the addTeam method where the user does not exist in the database.
    *
    * @throws TeamValidationException if the user does not exist
    */
   @Test
-  void testAddTeam_UserIdDoesNotExist() throws TeamValidationException {
+  void testAddTeamUserIdDoesNotExist() throws TeamValidationException {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
     when(teamRepository.save(any(Team.class))).thenReturn(team);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByUserId("user1Id")).thenReturn(null);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByEmail("user2Id")).thenReturn(user2);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(null);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByEmail(user2.getUserId())).thenReturn(user2);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("User with ID user1Id does not exist",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with ID " + user1.getUserId() + " does not exist.");
+    assertEquals(responseBody, response.getBody());
   }
 
-  //TODO: Add test for when an user is the team is already in an another team
+  // TODO: Add test for when an user is the team is already in an another team
 
   /**
-   * Tests the addTeam method where the user is not part of the project
+   * Tests the addTeam method where the user is not part of the project.
    */
   @Test
-  void testAddTeam_UserIsNotPartOfProject() {
+  void testAddTeamUserIsNotPartOfProject() {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
     when(teamRepository.save(any(Team.class))).thenReturn(team);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByEmail("user2Id")).thenReturn(user2);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByEmail(user2.getUserId())).thenReturn(user2);
 
     project.setUserIds(Arrays.asList("ownerId", "user2Id"));
 
@@ -626,49 +605,49 @@ public class TeamServiceTest {
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("User with ID user1Id is not part of the project",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with ID " + user1.getUserId() + " is not part of the project.");
+    assertEquals(responseBody, response.getBody());
   }
 
 
   /**
    * Tests and AddTeam execution by using reflection to see if the CompletedTeamCreateDto is created
-   * correctly
+   * correctly.
    *
-   * @throws NoSuchMethodException     if the validateTeam method is not found
+   * @throws NoSuchMethodException if the validateTeam method is not found
    * @throws InvocationTargetException if the validateTeam method cannot be invoked
-   * @throws IllegalAccessException    if the validateTeam method cannot be accessed
+   * @throws IllegalAccessException if the validateTeam method cannot be accessed
    */
   @Test
-  void testAddTeam_success_usingReflection()
+  void testAddTeamsuccessusingReflection()
       throws NoSuchMethodException, InvocationTargetException, IllegalAccessException {
+
+    // Mock necessary repository calls
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+
     // Arrange: Set up mock objects and spy on TeamService
     TeamService teamServiceSpy = Mockito.spy(teamService);
 
     // Prepare DTO
-    TeamCreateDto teamCreateDto = new TeamCreateDto("teamName",
-        "teamDescription", "projectId",
+    TeamCreateDto teamCreateDto = new TeamCreateDto("teamName", "teamDescription", "projectId",
         new ArrayList<>(Arrays.asList("user1@example.com", "user2@example.com")));
 
-    // Mock necessary repository calls
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-
     // Prepare the expected CompletedTeamCreateDto
-    CompletedTeamCreateDto expectedDto = new CompletedTeamCreateDto("teamName",
-        "projectId", 123456789L,
-        "teamDescription", Arrays.asList("user1Id", "user2Id"));
+    CompletedTeamCreateDto expectedDto = new CompletedTeamCreateDto("teamName", "projectId",
+        123456789L, "teamDescription", Arrays.asList("user1Id", "user2Id"));
 
     // Use reflection to invoke the private method 'validateTeam'
-    Method validateTeamMethod = TeamService.class.getDeclaredMethod("validateTeam",
-        TeamCreateDto.class);
+    Method validateTeamMethod =
+        TeamService.class.getDeclaredMethod("validateTeam", TeamCreateDto.class);
     validateTeamMethod.setAccessible(true); // Make the method accessible
 
     // Act: Invoke the private method
-    CompletedTeamCreateDto result = (CompletedTeamCreateDto) validateTeamMethod.
-        invoke(teamServiceSpy, teamCreateDto);
+    CompletedTeamCreateDto result =
+        (CompletedTeamCreateDto) validateTeamMethod.invoke(teamServiceSpy, teamCreateDto);
 
     // Assert: Check if 'creationDate' is non-negative and if userIds match
     assertTrue(result.creationDate() >= 0); // Ensure creationDate is valid (non-negative)
@@ -679,43 +658,33 @@ public class TeamServiceTest {
   }
 
   /**
-   * Tests the method addTeamToUsers with reflection, in the case where the team i null
-   *
-   * @throws NoSuchMethodException     if the addTeamToUsers method is not found
-   * @throws InvocationTargetException if the addTeamToUsers method cannot be invoked
-   * @throws IllegalAccessException    if the addTeamToUsers method cannot be accessed
+   * Tests the method addTeamToUsers with reflection, in the case where the team is null.
    */
   @Test
-  void testAddTeamToUsers_TeamNull() throws NoSuchMethodException,
-      InvocationTargetException, IllegalAccessException {
-    //Arrange
+  void testAddTeamToUsersTeamNull() {
+    // Arrange
     TeamService teamServiceSpy = Mockito.spy(teamService);
     team = null;
 
     InvocationTargetException exception = assertThrows(InvocationTargetException.class, () -> {
-      Method addTeamToUsersMethod = TeamService.class.getDeclaredMethod("addTeamToUsers",
-          Team.class);
+      Method addTeamToUsersMethod =
+          TeamService.class.getDeclaredMethod("addTeamToUsers", Team.class);
       addTeamToUsersMethod.setAccessible(true);
       addTeamToUsersMethod.invoke(teamServiceSpy, team);
     });
 
-    //Assert
+    // Assert
     Throwable cause = exception.getCause();
     assertNotNull(cause, "Expected an exception cause but found null.");
-    assertInstanceOf(TeamValidationException.class, cause,
-        "Expected a TeamValidationException.");
-    assertEquals("Team cannot be null", cause.getMessage());
+    assertInstanceOf(TeamValidationException.class, cause, "Expected a TeamValidationException.");
+    assertEquals("Team cannot be null.", cause.getMessage());
   }
 
   /**
-   * Tests the method addTeamToUsers with reflection, in the case where the team has a null user
-   *
-   * @throws NoSuchMethodException  if the addTeamToUsers method is not found
-   * @throws IllegalAccessException if the addTeamToUsers method cannot be accessed
+   * Tests the method addTeamToUsers with reflection, in the case where the team has a null user.
    */
   @Test
-  void testAddTeamToUsers_UserIdNull()
-      throws NoSuchMethodException, IllegalAccessException {
+  void testAddTeamToUsersUserIdNull() {
     // Arrange
     TeamService teamServiceSpy = Mockito.spy(teamService);
 
@@ -723,8 +692,8 @@ public class TeamServiceTest {
 
     // Act & Assert
     InvocationTargetException exception = assertThrows(InvocationTargetException.class, () -> {
-      Method addTeamToUsersMethod = TeamService.class.getDeclaredMethod(
-          "addTeamToUsers", Team.class);
+      Method addTeamToUsersMethod =
+          TeamService.class.getDeclaredMethod("addTeamToUsers", Team.class);
       addTeamToUsersMethod.setAccessible(true);
       addTeamToUsersMethod.invoke(teamServiceSpy, team);
     });
@@ -732,20 +701,15 @@ public class TeamServiceTest {
     // Assert the cause
     Throwable cause = exception.getCause();
     assertNotNull(cause, "Expected an exception cause but found null.");
-    assertInstanceOf(TeamValidationException.class, cause,
-        "Expected a TeamValidationException.");
-    assertEquals("User ID is null or empty", cause.getMessage());
+    assertInstanceOf(TeamValidationException.class, cause, "Expected a TeamValidationException.");
+    assertEquals("User ID is null or empty.", cause.getMessage());
   }
 
   /**
-   * Tests the method addTeamToUsers with reflection, in the case where the team has an empty user
-   *
-   * @throws NoSuchMethodException  if the addTeamToUsers method is not found
-   * @throws IllegalAccessException if the addTeamToUsers method cannot be accessed
+   * Tests the method addTeamToUsers with reflection, in the case where the team has an empty user.
    */
   @Test
-  void testAddTeamToUsers_UserIdEmpty()
-      throws NoSuchMethodException, IllegalAccessException {
+  void testAddTeamToUsersUserIdEmpty() {
     // Arrange
     TeamService teamServiceSpy = Mockito.spy(teamService);
 
@@ -753,8 +717,8 @@ public class TeamServiceTest {
 
     // Act & Assert
     InvocationTargetException exception = assertThrows(InvocationTargetException.class, () -> {
-      Method addTeamToUsersMethod = TeamService.class.getDeclaredMethod(
-          "addTeamToUsers", Team.class);
+      Method addTeamToUsersMethod =
+          TeamService.class.getDeclaredMethod("addTeamToUsers", Team.class);
       addTeamToUsersMethod.setAccessible(true);
       addTeamToUsersMethod.invoke(teamServiceSpy, team);
     });
@@ -762,31 +726,28 @@ public class TeamServiceTest {
     // Assert the cause
     Throwable cause = exception.getCause();
     assertNotNull(cause, "Expected an exception cause but found null.");
-    assertInstanceOf(TeamValidationException.class, cause,
-        "Expected a TeamValidationException.");
-    assertEquals("User ID is null or empty", cause.getMessage());
+    assertInstanceOf(TeamValidationException.class, cause, "Expected a TeamValidationException.");
+    assertEquals("User ID is null or empty.", cause.getMessage());
   }
 
 
   /**
-   * Tests the method addTeamToUsers with reflection, in the case where the user does not exist
-   *
-   * @throws NoSuchMethodException  if the addTeamToUsers method is not found
-   * @throws IllegalAccessException if the addTeamToUsers method cannot be accessed
+   * Tests the method addTeamToUsers with reflection, in the case where the user does not exist.
    */
   @Test
-  void testAddTeamToUsers_UserDoesNotExist() throws NoSuchMethodException, IllegalAccessException {
+  void testAddTeamToUsersUserDoesNotExist() {
     // Arrange
-    TeamService teamServiceSpy = Mockito.spy(teamService);
 
-    team.setUserIds(Arrays.asList("nonexistentUser", "user1Id"));
+    team.setUserIds(Arrays.asList("nonexistentUser", user1.getUserId()));
     when(userRepository.findByUserId("nonexistentUser")).thenReturn(null);
-    when(userRepository.findByUserId("user1")).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+
+    TeamService teamServiceSpy = Mockito.spy(teamService);
 
     // Act & Assert
     InvocationTargetException exception = assertThrows(InvocationTargetException.class, () -> {
-      Method addTeamToUsersMethod = TeamService.class.getDeclaredMethod(
-          "addTeamToUsers", Team.class);
+      Method addTeamToUsersMethod =
+          TeamService.class.getDeclaredMethod("addTeamToUsers", Team.class);
       addTeamToUsersMethod.setAccessible(true);
       addTeamToUsersMethod.invoke(teamServiceSpy, team);
     });
@@ -794,458 +755,666 @@ public class TeamServiceTest {
     // Assert the cause
     Throwable cause = exception.getCause();
     assertNotNull(cause, "Expected an exception cause but found null.");
-    assertInstanceOf(TeamValidationException.class, cause,
-        "Expected a TeamValidationException.");
-    assertEquals("User with ID nonexistentUser does not exist", cause.getMessage());
+    assertInstanceOf(TeamValidationException.class, cause, "Expected a TeamValidationException.");
+    assertEquals("User with ID nonexistentUser does not exist.", cause.getMessage());
   }
 
   /**
    * Tests the method addTeamToUsers with reflection, in the case where the user is not part of the
-   * project
-   *
-   * @throws NoSuchMethodException  if the addTeamToUsers method is not found
-   * @throws IllegalAccessException if the addTeamToUsers method cannot be accessed
+   * project.
    */
   @Test
-  void testAddTeamToUsers_UserNotInProject() throws NoSuchMethodException, IllegalAccessException {
-    //Arrange
-    TeamService teamServiceSpy = Mockito.spy(teamService);
+  void testAddTeamToUsersUserNotInProject() {
+    // Arrange
+    team.setProjectId(project.getProjectId());
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
 
-    team.setProjectId("projectId");
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByUserId("user2Id")).thenReturn(user2);
+    TeamService teamServiceSpy = Mockito.spy(teamService);
 
     project.setUserIds(Arrays.asList("user1Id", "user3Id")); // User not in project
     when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
 
-    //Act
+    // Act
     InvocationTargetException exception = assertThrows(InvocationTargetException.class, () -> {
-      Method addTeamToUsersMethod = TeamService.class.getDeclaredMethod
-          ("addTeamToUsers", Team.class);
+      Method addTeamToUsersMethod =
+          TeamService.class.getDeclaredMethod("addTeamToUsers", Team.class);
       addTeamToUsersMethod.setAccessible(true);
       addTeamToUsersMethod.invoke(teamServiceSpy, team);
     });
 
-    //Assert
+    // Assert
     Throwable cause = exception.getCause();
     assertNotNull(cause, "Expected an exception cause but found null.");
-    assertInstanceOf(TeamValidationException.class, cause,
-        "Expected a TeamValidationException.");
-    assertEquals("User with ID user2Id is not part of the project",
+    assertInstanceOf(TeamValidationException.class, cause, "Expected a TeamValidationException.");
+    assertEquals("User with ID " + user2.getUserId() + " is not part of the project.",
         cause.getMessage());
   }
 
   /**
-   * Tests a successful execution of the  getTeamsByProject method
+   * Tests a successful execution of the getTeamsByProject method.
    */
   @Test
   void testGetTeamsByProject() {
-    //Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(teamRepository.existsByProjectId("projectId")).thenReturn(true);
-    when(teamRepository.findTeamsByProjectId("projectId")).thenReturn(Arrays.asList(team));
+    // Arrange
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(teamRepository.existsByProjectId(project.getProjectId())).thenReturn(true);
+    when(teamRepository.findTeamsByProjectId(project.getProjectId())).thenReturn(List.of(team));
 
-    //Act
-    ResponseEntity<?> response = teamService.getTeamsByProject("projectId");
+    // Act
+    ResponseEntity<?> response = teamService.getTeamsByProject(project.getProjectId());
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    assertEquals(Arrays.asList(team), response.getBody());
+    assertEquals(List.of(team), response.getBody());
   }
 
   /**
-   * Tests an execution of the getTeamsByProject method where the project is null
+   * Tests an execution of the getTeamsByProject method where the project is null.
    */
   @Test
-  void testGetTeamsByProject_ProjectNull() {
-    //Act
+  void testGetTeamsByProjectProjectNull() {
+    // Act
     ResponseEntity<?> response = teamService.getTeamsByProject(null);
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Project ID is null or empty", response.getBody());
+    assertEquals("Project ID is null or empty.", response.getBody());
   }
 
   /**
-   * Tests an execution of the getTeamsByProject method where the project is empty
+   * Tests an execution of the getTeamsByProject method where the project is empty.
    */
   @Test
-  void testGetTeamsByProject_ProjectEmpty() {
-    //Act
+  void testGetTeamsByProjectProjectEmpty() {
+    // Act
     ResponseEntity<?> response = teamService.getTeamsByProject("");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Project ID is null or empty", response.getBody());
+    assertEquals("Project ID is null or empty.", response.getBody());
   }
 
   /**
-   * Tests an execution of the getTeamsByProject method where there no teams found for the project
+   * Tests an execution of the getTeamsByProject method where there no teams found for the project.
    */
   @Test
-  void testGetTeamsByProject_NoTeamsFound() {
-    //Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(teamRepository.existsByProjectId("projectId")).thenReturn(false);
+  void testGetTeamsByProjectNoTeamsFound() {
+    // Arrange
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(teamRepository.existsByProjectId(project.getProjectId())).thenReturn(false);
 
-    //Act
+    // Act
     ResponseEntity<?> response = teamService.getTeamsByProject("projectId");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("No teams found for project ID projectId", response.getBody());
+    assertEquals("No teams found for project ID projectId.", response.getBody());
   }
 
   /**
-   * Tests a successful execution of the getTeamByUser method
+   * Tests a successful execution of the getTeamByUser method.
    */
   @Test
   void testGetTeamsByUser() {
-    //Arrange
-    when(userRepository.findByUserId("userId")).thenReturn(user1);
-    when(teamRepository.existsByUserIdsContaining("userId")).thenReturn(true);
-    when(teamRepository.findByUserIdsContaining("userId")).thenReturn(Arrays.asList(team));
+    // Arrange
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(teamRepository.existsByUserIdsContaining(user1.getUserId())).thenReturn(true);
+    when(teamRepository.findByUserIdsContaining(user1.getUserId())).thenReturn(List.of(team));
 
-    //Act
-    ResponseEntity<?> response = teamService.getTeamsByUser("userId");
+    // Act
+    ResponseEntity<?> response = teamService.getTeamsByUser(user1.getUserId());
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    assertEquals(Arrays.asList(team), response.getBody());
+    assertEquals(List.of(team), response.getBody());
   }
 
   /**
-   * Tests an execution of the getTeamsByUser method where the user is null
+   * Tests an execution of the getTeamsByUser method where the user is null.
    */
   @Test
-  void testGetTeamsByUser_UserNull() {
-    //Act
+  void testGetTeamsByUserUserNull() {
+    // Act
     ResponseEntity<?> response = teamService.getTeamsByUser(null);
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("User ID is null or empty", response.getBody());
+    assertEquals("User ID is null or empty.", response.getBody());
   }
 
   /**
-   * Tests an execution of the getTeamsByUser method where the user is empty
+   * Tests an execution of the getTeamsByUser method where the user is empty.
    */
   @Test
-  void testGetTeamsByUser_UserEmpty() {
-    //Act
+  void testGetTeamsByUserUserEmpty() {
+    // Act
     ResponseEntity<?> response = teamService.getTeamsByUser("");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("User ID is null or empty", response.getBody());
+    assertEquals("User ID is null or empty.", response.getBody());
   }
 
   /**
-   * Tests an execution of the getTeamsByUser method where there are no teams found for the user
+   * Tests an execution of the getTeamsByUser method where there are no teams found for the user.
    */
   @Test
-  void testGetTeamsByUser_NoTeamsFound() {
-    //Arrange
-    when(userRepository.findByUserId("userId")).thenReturn(user1);
-    when(teamRepository.existsByUserIdsContaining("userId")).thenReturn(false);
+  void testGetTeamsByUserNoTeamsFound() {
+    // Arrange
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(teamRepository.existsByUserIdsContaining(user1.getUserId())).thenReturn(false);
 
-    //Act
-    ResponseEntity<?> response = teamService.getTeamsByUser("userId");
+    // Act
+    ResponseEntity<?> response = teamService.getTeamsByUser(user1.getUserId());
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("No teams found for user ID userId", response.getBody());
+    assertEquals("No teams found for user ID " + user1.getUserId() + ".", response.getBody());
   }
 
   /**
-   * Tests a successful execution of the deleteTeam method
+   * Tests a successful execution of the deleteTeam method.
    */
   @Test
   void testDeleteTeam() {
-    //Arrange
-    when(teamRepository.findById("teamId")).thenReturn(Optional.ofNullable(team));
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
+    // Arrange
+    when(teamRepository.findById(team.getTeamId())).thenReturn(Optional.ofNullable(team));
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
     when(projectRepository.save(project)).thenReturn(project);
 
-    when(userRepository.findById("user2Id")).thenReturn(Optional.ofNullable(user2));
+    when(userRepository.findById(user2.getUserId())).thenReturn(Optional.ofNullable(user2));
     when(userRepository.save(user2)).thenReturn(user2);
-    when(userRepository.findById("user1Id")).thenReturn(Optional.ofNullable(user1));
+    when(userRepository.findById(user1.getUserId())).thenReturn(Optional.ofNullable(user1));
     when(userRepository.save(user1)).thenReturn(user1);
-    when(teamRepository.existsById("teamId")).thenReturn(false);
+    when(teamRepository.existsById(team.getTeamId())).thenReturn(false);
 
-    when(artifactService.deleteArtifact("artifactId")).
-        thenReturn(ResponseEntity.ok().build());
+    when(artifactService.deleteArtifact(artifact.getArtifactId()))
+        .thenReturn(ResponseEntity.ok().build());
 
-    //Act
-    ResponseEntity<?> response = teamService.deleteTeam("teamId");
+    // Act
+    ResponseEntity<?> response = teamService.deleteTeam(team.getTeamId());
 
+    // Assert
+    assertEquals(HttpStatus.OK, response.getStatusCode());
     Map<String, String> responseBody = new HashMap<>();
     responseBody.put("msg", "Team deleted successfully.");
-    //Assert
-    assertEquals(HttpStatus.OK, response.getStatusCode());
     assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the deleteTeam method where the team is null
+   * Tests an execution of the deleteTeam method where the team is null.
    */
   @Test
-  void testDeleteTeam_TeamNull() {
-    //Act
+  void testDeleteTeamTeamNull() {
+    // Act
     ResponseEntity<?> response = teamService.deleteTeam(null);
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Team ID is null or empty",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team ID is null or empty.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the deleteTeam method where the team is empty
+   * Tests an execution of the deleteTeam method where the team is empty.
    */
   @Test
-  void testDeleteTeam_TeamEmpty() {
-    //Act
+  void testDeleteTeamTeamEmpty() {
+    // Act
     ResponseEntity<?> response = teamService.deleteTeam("");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Team ID is null or empty",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team ID is null or empty.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the deleteTeam method where the team is not found
+   * Tests an execution of the deleteTeam method where the team is not found.
    */
   @Test
-  void testDeleteTeam_TeamNotFound() {
-    //Arrange
-    when(teamRepository.findById("teamId")).thenReturn(Optional.empty());
+  void testDeleteTeamTeamNotFound() {
+    // Arrange
+    when(teamRepository.findById(team.getTeamId())).thenReturn(Optional.empty());
 
-    //Act
+    // Act
+    ResponseEntity<?> response = teamService.deleteTeam(team.getTeamId());
+
+    // Assert
+    assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team not found.");
+    assertEquals(responseBody, response.getBody());
+  }
+
+  /**
+   * Test an execution of the deleteTeam method where the project is not found.
+   */
+  @Test
+  void testDeleteTeamProjectNotFound() {
+    // Arrange
+    when(teamRepository.findById(team.getTeamId())).thenReturn(Optional.ofNullable(team));
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(null);
+
+    // Act
     ResponseEntity<?> response = teamService.deleteTeam("teamId");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("Team not found",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Project not found.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Test an execution of the deleteTeam method where the project is not found
+   * Tests an execution of the deleteTeam method where the user is not found.
    */
   @Test
-  void testDeleteTeam_ProjectNotFound() {
-    //Arrange
-    when(teamRepository.findById("teamId")).thenReturn(Optional.ofNullable(team));
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(null);
-
-    //Act
-    ResponseEntity<?> response = teamService.deleteTeam("teamId");
-
-    //Assert
-    assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("Project not found",
-        ((Map<String, String>) response.getBody()).get("msg"));
-  }
-
-  /**
-   * Tests an execution of the deleteTeam method where the user is not found
-   */
-  @Test
-  void testDeleteTeam_UserNotFound() {
-    //Arrange
-    when(teamRepository.findById("teamId")).thenReturn(Optional.ofNullable(team));
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
+  void testDeleteTeamUserNotFound() {
+    // Arrange
+    when(teamRepository.findById(team.getTeamId())).thenReturn(Optional.ofNullable(team));
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
     when(projectRepository.save(project)).thenReturn(project);
 
-    when(userRepository.findById("user1Id")).thenReturn(Optional.ofNullable(user1));
+    when(userRepository.findById(user1.getUserId())).thenReturn(Optional.ofNullable(user1));
     when(userRepository.save(user1)).thenReturn(user1);
-    when(userRepository.findById("user2Id")).thenReturn(Optional.empty());
+    when(userRepository.findById(user2.getUserId())).thenReturn(Optional.empty());
 
-    //Act
-    ResponseEntity<?> response = teamService.deleteTeam("teamId");
+    // Act
+    ResponseEntity<?> response = teamService.deleteTeam(team.getTeamId());
 
-    //Assert
+    // Assert
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with ID " + user2.getUserId() + " not found.");
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("User with ID user2Id not found",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the deleteTeam method where the team is not deleted
+   * Tests an execution of the deleteTeam method where the team is not deleted.
    */
   @Test
-  void testDeleteTeam_TeamNotDeleted() {
-    //Arrange
-    when(teamRepository.findById("teamId")).thenReturn(Optional.ofNullable(team));
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
+  void testDeleteTeamTeamNotDeleted() {
+    // Arrange
+    when(teamRepository.findById(team.getTeamId())).thenReturn(Optional.ofNullable(team));
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
     when(projectRepository.save(project)).thenReturn(project);
 
-    when(userRepository.findById("user2Id")).thenReturn(Optional.ofNullable(user2));
+    when(userRepository.findById(user2.getUserId())).thenReturn(Optional.ofNullable(user2));
     when(userRepository.save(user2)).thenReturn(user2);
-    when(userRepository.findById("user1Id")).thenReturn(Optional.ofNullable(user1));
+    when(userRepository.findById(user1.getUserId())).thenReturn(Optional.ofNullable(user1));
     when(userRepository.save(user1)).thenReturn(user1);
-    when(teamRepository.existsById("teamId")).thenReturn(true);
+    when(teamRepository.existsById(team.getTeamId())).thenReturn(true);
 
-    when(artifactService.deleteArtifact("artifactId")).
-        thenReturn(ResponseEntity.ok().build());
+    when(artifactService.deleteArtifact(artifact.getArtifactId()))
+        .thenReturn(ResponseEntity.ok().build());
 
-    //Act
-    ResponseEntity<?> response = teamService.deleteTeam("teamId");
+    // Act
+    ResponseEntity<?> response = teamService.deleteTeam(team.getTeamId());
+
+    // Assert
     Map<String, String> responseBody = new HashMap<>();
     responseBody.put("msg", "Team not deleted.");
-
-    //Assert
     assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests a successful execution of the getTeamIrr method
+   * Tests a successful execution of the getTeamIrr method.
    */
   @Test
-  void testGetTeamIrr_Success() {
-    //Arrange
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
-    when(artifactRepository.findArtifactByArtifactId("artifactId")).thenReturn(artifact);
-    when(tagRepository.findTagByTagId("tag1Id")).thenReturn(tag1);
-    when(tagRepository.findTagByTagId("tag2Id")).thenReturn(tag2);
+  void testGetTeamIrrSuccess() {
+    // Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(artifactRepository.findArtifactByArtifactId(artifact.getArtifactId()))
+        .thenReturn(artifact);
+    when(tagRepository.findTagByTagId(tag1.getTagId())).thenReturn(tag1);
+    when(tagRepository.findTagByTagId(tag2.getTagId())).thenReturn(tag2);
 
     String mockAlphaResponse = "{\"alpha\": 0.85}";
     when(pythonClientService.getKrippendorffAlpha(Mockito.anyList())).thenReturn(mockAlphaResponse);
 
-    //Act
-    ResponseEntity<?> response = teamService.getTeamIrr("teamId");
+    // Act
+    ResponseEntity<?> response = teamService.getTeamIrr(team.getTeamId());
 
-    //Assert
+    // Assert
     assertNotNull(response);
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    Map<String, Object> responseBody = (Map<String, Object>) response.getBody();
-    assertNotNull(responseBody);
-    assertEquals("Successfully retrieved Krippendorff's alpha", responseBody.get("msg"));
-    assertEquals(0.85, responseBody.get("irr"));
+    assertNotNull(response.getBody());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Successfully retrieved Krippendorff's alpha.");
+    responseBody.put("irr", 0.85);
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the getTeamIrr method where the team is not found
+   * Tests an execution of the getTeamIrr method where the team is not found.
    */
   @Test
-  void testGetTeamIrr_TeamNotFound() {
-    //Arrange
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(null);
+  void testGetTeamIrrTeamNotFound() {
+    // Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(null);
 
-    //Act
-    ResponseEntity<?> response = teamService.getTeamIrr("teamId");
+    // Act
+    ResponseEntity<?> response = teamService.getTeamIrr(team.getTeamId());
 
-    //Assert
+    // Assert
     assertNotNull(response);
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    Map<String, Object> responseBody = (Map<String, Object>) response.getBody();
-    assertNotNull(responseBody);
-    assertEquals("Team not found", responseBody.get("msg"));
+    assertNotNull(response.getBody());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team not found.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the getTeamIrr method where the artifact is not found
+   * Tests an execution of the getTeamIrr method where the artifact is not found.
    */
   @Test
-  void testGetTeamIrr_ArtifactNotFound() {
-    //Arrange
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
-    when(artifactRepository.findArtifactByArtifactId("artifactId")).thenReturn(null);
+  void testGetTeamIrrArtifactNotFound() {
+    // Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(artifactRepository.findArtifactByArtifactId(artifact.getArtifactId())).thenReturn(null);
 
-    //Act
-    ResponseEntity<?> response = teamService.getTeamIrr("teamId");
+    // Act
+    ResponseEntity<?> response = teamService.getTeamIrr(team.getTeamId());
 
-    //Assert
+    // Assert
     assertNotNull(response);
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    Map<String, Object> responseBody = (Map<String, Object>) response.getBody();
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Artifact not found.");
     assertNotNull(responseBody);
-    assertEquals("Artifact not found", responseBody.get("msg"));
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the getTeamIrr method where the tag is not found
+   * Tests an execution of the getTeamIrr method where the tag is not found.
    */
   @Test
-  void testGetTeamIrr_NoTagsForArtifact() {
-    //Arrange
+  void testGetTeamIrrNoTagsForArtifact() {
+    // Arrange
     artifact.setTags(new ArrayList<>()); // Artifact has no tags
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
-    when(artifactRepository.findArtifactByArtifactId("artifactId")).thenReturn(artifact);
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(artifactRepository.findArtifactByArtifactId(artifact.getArtifactId()))
+        .thenReturn(artifact);
 
     String mockAlphaResponse = "{\"alpha\": 1.0}";
     when(pythonClientService.getKrippendorffAlpha(Mockito.anyList())).thenReturn(mockAlphaResponse);
 
-    //Act
-    ResponseEntity<?> response = teamService.getTeamIrr("teamId");
+    // Act
+    ResponseEntity<?> response = teamService.getTeamIrr(team.getTeamId());
 
-    //Assert
+    // Assert
     assertNotNull(response);
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    Map<String, Object> responseBody = (Map<String, Object>) response.getBody();
-    assertNotNull(responseBody);
-    assertEquals("Successfully retrieved Krippendorff's alpha", responseBody.get("msg"));
-    assertEquals(1.0, responseBody.get("irr")); // Default alpha value
+    assertNotNull(response.getBody());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Successfully retrieved Krippendorff's alpha.");
+    responseBody.put("irr", 1.0); // Default alpha value
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the getTeamIrr method where the tag creator is mismatched
+   * Tests an execution of the getTeamIrr method where the tag creator is mismatched.
    */
   @Test
-  void testGetTeamIrr_TagCreatedByUserMismatch() {
-    //Arrange
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
-    when(artifactRepository.findArtifactByArtifactId("artifactId")).thenReturn(artifact);
+  void testGetTeamIrrTagCreatedByUserMismatch() {
+    // Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(artifactRepository.findArtifactByArtifactId(artifact.getArtifactId()))
+        .thenReturn(artifact);
 
     tag1.setCreatedBy("otherUserId"); // No user in the team matches this creator
-    when(tagRepository.findTagByTagId("tagId1")).thenReturn(tag1);
-    when(tagRepository.findTagByTagId("tagId2")).thenReturn(tag2);
+    when(tagRepository.findTagByTagId(tag1.getTagId())).thenReturn(tag1);
+    when(tagRepository.findTagByTagId(tag2.getTagId())).thenReturn(tag2);
 
     String mockAlphaResponse = "{\"alpha\": 0.0}";
     when(pythonClientService.getKrippendorffAlpha(Mockito.anyList())).thenReturn(mockAlphaResponse);
 
-    //Act
-    ResponseEntity<?> response = teamService.getTeamIrr("teamId");
+    // Act
+    ResponseEntity<?> response = teamService.getTeamIrr(team.getTeamId());
 
-    //Assert
+    // Assert
     assertNotNull(response);
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    Map<String, Object> responseBody = (Map<String, Object>) response.getBody();
-    assertNotNull(responseBody);
-    assertEquals("Successfully retrieved Krippendorff's alpha", responseBody.get("msg"));
-    assertEquals(0.0, responseBody.get("irr")); // Alpha drops due to mismatch
+    assertNotNull(response.getBody());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Successfully retrieved Krippendorff's alpha.");
+    responseBody.put("irr", 0.0); // Alpha drops due to mismatch
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Test a successful execution of UpdateTeamUsers method
+   * Test a successful execution of UpdateTeamUsers method.
    */
-  //@Test
-  //void testUpdateTeamUsers_Success() {
+  @Test
+  void testUpdateTeamUsersSuccess() {
     // Arrange
-    //when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
-    //when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    //when(userRepository.findByEmail("user3@example.com")).thenReturn(user3);
-    //when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    //when(userRepository.findByUserId("user3Id")).thenReturn(user3);
-    //when(userRepository.save(user3)).thenReturn(user3);
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByEmail(user3.getEmail())).thenReturn(user3);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
+    when(userRepository.findByUserId(user3.getUserId())).thenReturn(user3);
+    when(userRepository.save(user3)).thenReturn(user3);
 
-    //List<String> userEmails = Arrays.asList("user1@example.com", "user3@example.com");
+    List<String> userEmails = Arrays.asList(user1.getEmail(), user3.getEmail());
 
     // Act
-    //ResponseEntity<?> response = teamService.updateTeamUsers("teamId", userEmails);
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(), userEmails);
+
+    System.out.println(response.getBody());
 
     // Assert
-    //assertNotNull(response);
-    //assertEquals(HttpStatus.OK, response.getStatusCode());
-    //assertEquals("Team users updated successfully",
-    //    ((Map<String, String>) response.getBody()).get("msg"));
-    //verify(teamRepository).save(team);
-    //assertEquals(Arrays.asList("user1Id", "user3Id"), team.getUserIds());
-    //assertTrue(user3.getTeamIds().contains("teamId"));
-  //}
+    assertNotNull(response);
+    assertEquals(HttpStatus.OK, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team users updated successfully.");
+    assertEquals(responseBody, response.getBody());
+    verify(teamRepository).save(team);
+    assertEquals(Arrays.asList(user1.getUserId(), user3.getUserId()), team.getUserIds());
+    assertTrue(user3.getTeamIds().contains("teamId")); // This doesn't work apparently...
+    assertFalse(user2.getTeamIds().contains("teamId"));
+  }
+
+  /**
+   * Tests an execution of testUpdateUsers where the team is null.
+   */
+  @Test
+  void testUpdateTeamUsersTeamNull() {
+    // Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(null);
+    List<String> userEmails = Arrays.asList(user1.getEmail(), user3.getEmail());
+
+    // Act
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(), userEmails);
+
+    // Assert
+    assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team not found.");
+    assertEquals(responseBody, response.getBody());
+  }
+
+  /**
+   * Tests an execution for updateTeamUsers where the user is not found in the project.
+   */
+  @Test
+  void testUpdateTeamUsersUserNotFoundProject() {
+    // Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(null);
+    List<String> userEmails = Arrays.asList(user1.getEmail(), user3.getEmail());
+
+    // Act
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(), userEmails);
+
+    //
+    assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with email " + user1.getEmail() + " not found.");
+    assertEquals(responseBody, response.getBody());
+
+  }
+
+  /**
+   * Tests an execution of updateTeamUsers where the project is not found.
+   */
+  @Test
+  public void testUpdateTeamUsersProjectNotFound() {
+    // Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(null);
+
+    // Act
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(),
+        Arrays.asList(user1.getEmail(), user3.getEmail()));
+
+    // Assert
+    assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Project not found.");
+    assertEquals(responseBody, response.getBody());
+  }
+
+  /**
+   * Tests an execution of updateTeamUsers where the logged in user is not the project owner.
+   */
+  @Test
+  public void testUpdateTeamUsersNotProjectOwner() {
+    // Arrange
+    project.setOwnerId("otherUserId");
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+
+    // Act
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(),
+        Arrays.asList(user1.getEmail(), user3.getEmail()));
+
+    // Assert
+    assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Only the project owner can update the team users.");
+    assertEquals(responseBody, response.getBody());
+  }
+
+  /**
+   * Tests an execution of updateTeamUsers where one of the users is not part of the project.
+   */
+  @Test
+  public void testUpdateTeamUsersUserNotInProject() {
+    // Arrange
+    project.setUserIds(Arrays.asList("ownerId", "user2Id"));
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+
+    // Act
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(),
+        Arrays.asList(user1.getEmail(), user3.getEmail()));
+
+    // Assert
+    assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with email " + user1.getEmail() + " is not part of the project.");
+    assertEquals(responseBody, response.getBody());
+  }
+
+  /**
+   * Tests an execution of updateTeamUsers where the user is not found (in the database).
+   */
+  @Test
+  public void testUpdateTeamUsersUserNotFound() {
+    // Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByEmail(user3.getEmail())).thenReturn(user3);
+
+    // Act
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(),
+        Arrays.asList(user1.getEmail(), user3.getEmail()));
+
+    // Assert
+    assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with ID " + user1.getUserId() + " not found.");
+    assertEquals(responseBody, response.getBody());
+  }
+
+  /**
+   * Tests an execution of updateTeamUsers where the user to add to team is not found.
+   */
+  @Test
+  public void testUpdateTeamUsersUserToAddNotFound() {
+    // Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByEmail(user3.getEmail())).thenReturn(user3);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
+    when(userRepository.findByUserId(user3.getUserId())).thenReturn(null);
+
+    // Act
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(),
+        Arrays.asList(user1.getEmail(), user3.getEmail()));
+
+    // Assert
+    assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with ID " + user3.getUserId() + " not found.");
+    assertEquals(responseBody, response.getBody());
+  }
+
+  /**
+   * Tests an execution of updateTeamUsers where the user to add is already in another team.
+   */
+  @Test
+  public void testUpdateTeamUsersUserToAddAlreadyInTeam() {
+    // Arrange
+    Team anotherTeam = new Team("anotherTeam", project.getProjectId(), 123456789L,
+        "teamDescription", new ArrayList<>(List.of(user3.getUserId())));
+    anotherTeam.setTeamId("anotherTeamId");
+    project.setTeamIds(Arrays.asList("teamId", "anotherTeamId"));
+    user3.setTeamIds(new ArrayList<>(List.of("anotherTeamId")));
+
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(teamRepository.findTeamByTeamId(anotherTeam.getTeamId())).thenReturn(anotherTeam);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByEmail(user3.getEmail())).thenReturn(user3);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
+    when(userRepository.findByUserId(user3.getUserId())).thenReturn(user3);
+    when(userRepository.save(user1)).thenReturn(user1);
+    when(userRepository.save(user2)).thenReturn(user2);
+    when(userRepository.save(user3)).thenReturn(user3);
+
+    // Act
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(),
+        Arrays.asList(user1.getEmail(), user3.getEmail()));
+
+    // Assert
+    assertNotNull(response);
+    assertEquals(HttpStatus.OK, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team users updated successfully.");
+    assertEquals(responseBody, response.getBody());
+    assertEquals(Arrays.asList(user1.getUserId(), user3.getUserId()), team.getUserIds());
+    assertTrue(user3.getTeamIds().contains("teamId"));
+    assertFalse(user3.getTeamIds().contains("anotherTeamId"));
+    assertFalse(anotherTeam.getUserIds().contains(user3.getUserId()));
+    assertFalse(user2.getTeamIds().contains("teamId"));
+  }
+
 
 
 }
