@@ -22,8 +22,11 @@ import it.unisannio.studenti.qualitag.repository.UserRepository;
 import it.unisannio.studenti.qualitag.security.model.CustomUserDetails;
 import it.unisannio.studenti.qualitag.security.service.AuthenticationService;
 import it.unisannio.studenti.qualitag.security.service.JwtService;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -36,6 +39,9 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 
+/**
+ * Tests the UserService class.
+ */
 public class UserServiceTest {
 
   @Mock
@@ -66,10 +72,18 @@ public class UserServiceTest {
 
   private UserModifyDto userModifyDto;
   private PasswordUpdateDto passwordUpdateDto;
-  private User user1, user2, owner;
-  private Tag tag1, tag2;
+
+  private User user1;
+  private User user2;
+  private User owner;
+
+  private Tag tag1;
+  private Tag tag2;
+
   private Project project;
+
   private Team team;
+
   private Artifact artifact;
 
 
@@ -80,53 +94,49 @@ public class UserServiceTest {
   public void setUp() {
     MockitoAnnotations.openMocks(this);
 
-    //Initiliaza the users object
-    user1 = new User("user1", "user1@example.com",
-        "password1", "Jane", "Doe");
+    // Initialize the users object
+    user1 = new User("user1", "user1@example.com", "password1", "Jane", "Doe");
     user1.setUserId("user1Id");
-    user2 = new User("user2", "user2@example.com",
-        "password2", "John", "Doe");
+    user2 = new User("user2", "user2@example.com", "password2", "John", "Doe");
     user2.setUserId("user2Id");
-    owner = new User("owner", "owner@example.com",
-        "password2", "Alice", "Smith");
+    owner = new User("owner", "owner@example.com", "password2", "Alice", "Smith");
     owner.setUserId("ownerId");
 
-    //Initializa the project
-    project = new Project("projectName", "projectDescription",
-        0L, 0L, "ownerId", new ArrayList<>());
+    // Initialize the project
+    long creationDate = Instant.now().toEpochMilli();
+    long deadline = Instant.parse("2025-12-31T23:59:59Z").toEpochMilli();
+    project = new Project("projectName", "projectDescription", creationDate, deadline,
+        owner.getUserId(), new ArrayList<>());
     project.setProjectId("projectId");
     project.setUserIds(new ArrayList<>(Arrays.asList("ownerId", "user1Id", "user2Id")));
-    user1.setProjectIds(new ArrayList<>(Arrays.asList("projectId")));
-    owner.setProjectIds(new ArrayList<>(Arrays.asList("projectId")));
+    user1.setProjectIds(new ArrayList<>(List.of("projectId")));
+    owner.setProjectIds(new ArrayList<>(List.of("projectId")));
 
-    //Initialize the tag objects
+    // Initialize the tag objects
     tag1 = new Tag("tag1", "user1Id", "fff8de");
-    tag1.setTagId("tag1Id");
+    tag1.setTagId("6744ba6c60e0564864250e89");
     tag2 = new Tag("tag2", "user1Id", "#295f98");
-    tag2.setTagId("tag2Id");
-    user1.setTagIds(new ArrayList<>(Arrays.asList("tag1Id", "tag2Id")));
+    tag2.setTagId("6755b79afc22f97c06a34275");
+    user1.setTagIds(
+        new ArrayList<>(Arrays.asList("6744ba6c60e0564864250e89", "6755b79afc22f97c06a34275")));
 
-    //Initialize the team object
-    team = new Team("teamName", "projectId",
-        123456789L, "teamDescription",
+    // Initialize the team object
+    team = new Team("teamName", "projectId", 123456789L, "teamDescription",
         new ArrayList<>(Arrays.asList("user1Id", "user2Id")));
     team.setTeamId("teamId");
-    user1.setTeamIds(new ArrayList<>(Arrays.asList("teamId")));
-    user2.setTeamIds(new ArrayList<>(Arrays.asList("teamId")));
+    user1.setTeamIds(new ArrayList<>(List.of("teamId")));
+    user2.setTeamIds(new ArrayList<>(List.of("teamId")));
 
-    //Initialize the artifact object
-    artifact = new Artifact("artifactName",
-        "projectId", "teamId", "filePath");
+    // Initialize the artifact object
+    artifact = new Artifact("artifactName", "projectId", "teamId", "filePath");
     artifact.setArtifactId("artifactId");
     artifact.setTags(new ArrayList<>(Arrays.asList("tagId1", "tagId2")));
 
-    //Initialize the dtos
-    userModifyDto = new UserModifyDto("user1Figo", "user1Figo@example.com",
-        "Jane", "Doe");
-    passwordUpdateDto = new PasswordUpdateDto("pAssword12$",
-        "pAssword12$");
+    // Initialize the dto
+    userModifyDto = new UserModifyDto("user1Figo", "user1Figo@example.com", "Jane", "Doe");
+    passwordUpdateDto = new PasswordUpdateDto("pAssword12$", "pAssword12$");
 
-    //Initiliaze authorization details
+    // Initialize authorization details
     // Mock SecurityContextHolder to provide an authenticated user
     Authentication authentication = mock(Authentication.class);
     when(authentication.isAuthenticated()).thenReturn(true);
@@ -139,62 +149,62 @@ public class UserServiceTest {
 
 
   /**
-   * Tests a successful execution of getUSer method
+   * Tests a successful execution of getUSer method.
    */
   @Test
-  void testGetUser_Success() {
-    //Arrange
+  void testGetUserSuccess() {
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(user1);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.getUser("user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.OK, response.getStatusCode());
   }
 
   /**
-   * Tests an execution of the getUser method when the user is not found
+   * Tests an execution of the getUser method when the user is not found.
    */
   @Test
-  void testGetUser_NotFound() {
-    //Arrange
+  void testGetUserNotFound() {
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(null);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.getUser("user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
   }
 
   /**
-   * Tests a successful execution of getUserTags method
+   * Tests a successful execution of getUserTags method.
    */
   @Test
-  void testGetUserTags_Success() {
-    //Arrange
+  void testGetUserTagsSuccess() {
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(user1);
-    when(tagRepository.findTagByTagId("tag1Id")).thenReturn(tag1);
-    when(tagRepository.findTagByTagId("tag2Id")).thenReturn(tag2);
+    when(tagRepository.findTagByTagId("6744ba6c60e0564864250e89")).thenReturn(tag1);
+    when(tagRepository.findTagByTagId("6755b79afc22f97c06a34275")).thenReturn(tag2);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.getUserTags("user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    assertEquals("Tags retrieved successfully.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
-    assertEquals(Arrays.asList(tag1, tag2),
-        ((Map<String, Object>) response.getBody()).get("tags"));
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Tags retrieved successfully.");
+    responseBody.put("tags", Arrays.asList(tag1, tag2));
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of getUserTags method when the user is not authorized
+   * Tests an execution of getUserTags method when the user is not authorized.
    */
   @Test
-  void testGetUsetTags_Unauthorized() {
-    //Arrange
+  void testGetUserTagsUnauthorized() {
+    // Arrange
     Authentication authentication = mock(Authentication.class);
     when(authentication.isAuthenticated()).thenReturn(true);
     when(authentication.getName()).thenReturn("otherUser");
@@ -202,97 +212,100 @@ public class UserServiceTest {
     when(securityContext.getAuthentication()).thenReturn(authentication);
     SecurityContextHolder.setContext(securityContext);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.getUserTags("user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode());
-    assertEquals("You are not authorized to access to this user.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "You are not authorized to access to this user.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of getUserTags method when the user is not found
+   * Tests an execution of getUserTags method when the user is not found.
    */
   @Test
-  void testGetUserTags_UserNotFound() {
-    //Arrange
+  void testGetUserTagsUserNotFound() {
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(null);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.getUserTags("user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("User not found.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User not found.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests a successful execution of updateUser method
+   * Tests a successful execution of updateUser method.
    */
   @Test
-  void testUpdateUser_Success() {
-    //Arrange
+  void testUpdateUserSuccess() {
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(user1);
     when(userRepository.existsByUsername("user1Figo")).thenReturn(false);
     when(userRepository.existsByEmail("user1Figo@example.com")).thenReturn(false);
     when(userRepository.save(user1)).thenReturn(user1);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.updateUser(userModifyDto, "user1");
+    assertEquals(HttpStatus.OK, response.getStatusCode());
 
-    //Assert
-    verify(jwtService, times(1)).generateToken
-        (new CustomUserDetails(user1));
-    ;
+    // Assert
+    verify(jwtService, times(1)).generateToken(new CustomUserDetails(user1));
+
     verify(userMapper, times(1)).updateEntity(userModifyDto, user1);
     verify(userRepository, times(1)).save(user1);
-    assertEquals(HttpStatus.OK, response.getStatusCode());
-    assertEquals("User updated successfully.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
-
+    
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User updated successfully.");
+    responseBody.put("wholeuser", null);
+    responseBody.put("token", null);
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
    * Tests a successful execution of updateUser method when the user doesn't change is username or
-   * email
+   * email.
    */
   @Test
-  void testUpdateUser_NoChange() {
-    //Arrange
-    UserModifyDto noChangeUserModifyDto = new UserModifyDto("user1",
-        "user1@example.com", "Jane", "Doe");
+  void testUpdateUserNoChange() {
+    // Arrange
+    UserModifyDto noChangeUserModifyDto =
+        new UserModifyDto("user1", "user1@example.com", "Jane", "Doe");
     when(userRepository.findByUsername("user1")).thenReturn(user1);
     when(userRepository.save(user1)).thenReturn(user1);
     when(userRepository.existsByUsername("user1Figo")).thenReturn(false);
     when(userRepository.existsByEmail("user1Figo@example.com")).thenReturn(false);
     when(userRepository.save(user1)).thenReturn(user1);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.updateUser(noChangeUserModifyDto, "user1");
 
-    //Assert
-    verify(jwtService, times(1)).generateToken
-        (new CustomUserDetails(user1));
-    ;
-    verify(userMapper, times(1))
-        .updateEntity(noChangeUserModifyDto, user1);
-    verify(userRepository, times(1)).save(user1);
+    // Assert
+    verify(jwtService, times(1)).generateToken(new CustomUserDetails(user1));
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    assertEquals("User updated successfully.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
 
-
+    verify(userMapper, times(1)).updateEntity(noChangeUserModifyDto, user1);
+    verify(userRepository, times(1)).save(user1);
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User updated successfully.");
+    responseBody.put("wholeuser", null);
+    responseBody.put("token", null);
+    assertEquals(responseBody, response.getBody());
   }
 
 
   /**
-   * Tests and execution of updateUser method when the user is not authorized
+   * Tests and execution of updateUser method when the user is not authorized.
    */
   @Test
-  void testUpdateUser_Unauthorized() {
-    //Arrange
+  void testUpdateUserUnauthorized() {
+    // Arrange
     Authentication authentication = mock(Authentication.class);
     when(authentication.isAuthenticated()).thenReturn(true);
     when(authentication.getName()).thenReturn("otherUser");
@@ -300,165 +313,171 @@ public class UserServiceTest {
     when(securityContext.getAuthentication()).thenReturn(authentication);
     SecurityContextHolder.setContext(securityContext);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.updateUser(userModifyDto, "user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode());
-    assertEquals("You are not authorized to modify this user.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "You are not authorized to modify this user.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the updateUser method when not all fields are filled
+   * Tests an execution of the updateUser method when not all fields are filled.
    */
   @Test
-  void testUpdateUser_MissingFields() {
-    //Arrange
-    UserModifyDto invalidUserModifyDto = new UserModifyDto("user1Figo",
-        "user1Figo@exaple.com", "", "");
+  void testUpdateUserMissingFields() {
+    // Arrange
+    UserModifyDto invalidUserModifyDto =
+        new UserModifyDto("user1Figo", "user1Figo@exaple.com", "", "");
     when(userRepository.findByUsername("user1")).thenReturn(user1);
     when(userRepository.existsByUsername("user1Figo")).thenReturn(false);
     when(userRepository.existsByEmail("user1Figo@example.com")).thenReturn(false);
     when(userRepository.save(user1)).thenReturn(user1);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.updateUser(invalidUserModifyDto, "user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("All fields must be filled.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "All fields must be filled.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of updateUser method when the new username is invalid
+   * Tests an execution of updateUser method when the new username is invalid.
    */
   @Test
-  void testUpdateUser_InvalidUsername() {
-    //Arrange
-    UserModifyDto invalidUserModifyDto = new UserModifyDto("ab",
-        "user1Figo@example.com", "Jane", "Doe");
+  void testUpdateUserInvalidUsername() {
+    // Arrange
+    UserModifyDto invalidUserModifyDto =
+        new UserModifyDto("ab", "user1Figo@example.com", "Jane", "Doe");
     when(userRepository.findByUsername("user1")).thenReturn(user1);
     when(userRepository.existsByUsername("ab")).thenReturn(false);
     when(userRepository.existsByEmail("user1Figo@example.com")).thenReturn(false);
     when(userRepository.save(user1)).thenReturn(user1);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.updateUser(invalidUserModifyDto, "user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Invalid username.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Invalid username.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of updateUser method when the new email is invalid
+   * Tests an execution of updateUser method when the new email is invalid.
    */
   @Test
-  void testUpdateUser_InvalidEmail() {
-    //Arrange
-    UserModifyDto invalidUserModifyDto = new UserModifyDto("user1Figo",
-        "user1Figo", "Jane", "Doe");
+  void testUpdateUserInvalidEmail() {
+    // Arrange
+    UserModifyDto invalidUserModifyDto = new UserModifyDto("user1Figo", "user1Figo", "Jane", "Doe");
     when(userRepository.findByUsername("user1")).thenReturn(user1);
     when(userRepository.existsByUsername("user1Figo")).thenReturn(false);
     when(userRepository.existsByEmail("user1Figo")).thenReturn(false);
     when(userRepository.save(user1)).thenReturn(user1);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.updateUser(invalidUserModifyDto, "user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Invalid email address.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Invalid email address.");
+    assertEquals(responseBody, response.getBody());
   }
 
 
   /**
-   * Tests an execution of updateUser method when the user is not found
+   * Tests an execution of updateUser method when the user is not found.
    */
   @Test
-  void testUpdateUser_UserNotFound() {
-    //Arrange
+  void testUpdateUserUserNotFound() {
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(null);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.updateUser(userModifyDto, "user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("User not found.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User not found.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of updateUser method when the new username is already taken
+   * Tests an execution of updateUser method when the new username is already taken.
    */
   @Test
-  void testUpdateUser_UsernameTaken() {
-    //Arrange
+  void testUpdateUserUsernameTaken() {
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(user1);
     when(userRepository.existsByUsername("user1Figo")).thenReturn(true);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.updateUser(userModifyDto, "user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Username already taken.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Username already taken.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of updateUser method when the new email is already taken
+   * Tests an execution of updateUser method when the new email is already taken.
    */
   @Test
-  void testUpdateUser_EmailTaken() {
-    //Arrange
+  void testUpdateUserEmailTaken() {
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(user1);
     when(userRepository.existsByUsername("user1Figo")).thenReturn(false);
     when(userRepository.existsByEmail("user1Figo@example.com")).thenReturn(true);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.updateUser(userModifyDto, "user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Email already taken.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Email already taken.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests a successful execution of the updatePassword method
+   * Tests a successful execution of the updatePassword method.
    */
   @Test
   void testUpdatePassword() {
-    //Arrange
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(user1);
     when(userRepository.save(user1)).thenReturn(user1);
 
-    //Act
-    ResponseEntity<?> response = userService.updatePassword(passwordUpdateDto,
-        "user1");
+    // Act
+    ResponseEntity<?> response = userService.updatePassword(passwordUpdateDto, "user1");
 
     System.out.println(response.getBody());
 
-    //Assert
+    // Assert
     verify(userMapper, times(1)).updateEntity(passwordUpdateDto, user1);
     verify(userRepository, times(1)).save(user1);
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    assertEquals("Password updated successfully.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Password updated successfully.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the updatePassword method when the user is not authorized
+   * Tests an execution of the updatePassword method when the user is not authorized.
    */
   @Test
-  void testUpdatePassword_Unauthorized() {
-    //Arrange
+  void testUpdatePasswordUnauthorized() {
+    // Arrange
     Authentication authentication = mock(Authentication.class);
     when(authentication.isAuthenticated()).thenReturn(true);
     when(authentication.getName()).thenReturn("otherUser");
@@ -469,132 +488,131 @@ public class UserServiceTest {
     when(userRepository.findByUsername("user1")).thenReturn(user1);
     when(userRepository.save(user1)).thenReturn(user1);
 
-    //Act
-    ResponseEntity<?> response = userService.updatePassword(passwordUpdateDto,
-        "user1");
+    // Act
+    ResponseEntity<?> response = userService.updatePassword(passwordUpdateDto, "user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode());
-    assertEquals("You are not authorized to modify this user.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "You are not authorized to modify this user.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the updatePassword method when not all fields are filled
+   * Tests an execution of the updatePassword method when not all fields are filled.
    */
   @Test
-  void testUpdatePassword_MissingFields() {
-    //Arrange
-    PasswordUpdateDto invalidPasswordUpdateDto = new PasswordUpdateDto("pAssword12$",
-        "");
+  void testUpdatePasswordMissingFields() {
+    // Arrange
+    PasswordUpdateDto invalidPasswordUpdateDto = new PasswordUpdateDto("pAssword12$", "");
     when(userRepository.findByUsername("user1")).thenReturn(user1);
     when(userRepository.save(user1)).thenReturn(user1);
 
-    //Act
-    ResponseEntity<?> response = userService.updatePassword(invalidPasswordUpdateDto,
-        "user1");
+    // Act
+    ResponseEntity<?> response = userService.updatePassword(invalidPasswordUpdateDto, "user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("All fields must be filled.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "All fields must be filled.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the updatePassword method when the password is invalid
+   * Tests an execution of the updatePassword method when the password is invalid.
    */
   @Test
-  void testUpdatePassword_InvalidPassword() {
-    //Arrange
-    PasswordUpdateDto invalidPasswordUpdateDto = new PasswordUpdateDto("password",
-        "password");
-
-    when(userRepository.findByUsername("user1")).thenReturn(user1);
-    when(userRepository.save(user1)).thenReturn(user1);
-
-    //Act
-    ResponseEntity<?> response = userService.updatePassword(invalidPasswordUpdateDto,
-        "user1");
-
-    //Assert
-    assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Invalid password.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
-  }
-
-  /**
-   * Tests an execution of the updatePassword method when new password doesn't match
-   */
-  @Test
-  void testUpdatePassword_PasswordsDontMatch() {
-    //Arrange
-    PasswordUpdateDto invalidPasswordUpdateDto = new PasswordUpdateDto(
-        "pAssword12$", "pAssword12$1");
+  void testUpdatePasswordInvalidPassword() {
+    // Arrange
+    PasswordUpdateDto invalidPasswordUpdateDto = new PasswordUpdateDto("password", "password");
 
     when(userRepository.findByUsername("user1")).thenReturn(user1);
     when(userRepository.save(user1)).thenReturn(user1);
 
-    //Act
-    ResponseEntity<?> response = userService.updatePassword(invalidPasswordUpdateDto,
-        "user1");
+    // Act
+    ResponseEntity<?> response = userService.updatePassword(invalidPasswordUpdateDto, "user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Passwords do not match.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Invalid password.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the updatePassword method when the user is not found
+   * Tests an execution of the updatePassword method when new password doesn't match.
    */
   @Test
-  void testUpdatePassword_UserNotFound() {
-    //Arrange
+  void testUpdatePasswordPasswordsDontMatch() {
+    // Arrange
+    PasswordUpdateDto invalidPasswordUpdateDto =
+        new PasswordUpdateDto("pAssword12$", "pAssword12$1");
+
+    when(userRepository.findByUsername("user1")).thenReturn(user1);
+    when(userRepository.save(user1)).thenReturn(user1);
+
+    // Act
+    ResponseEntity<?> response = userService.updatePassword(invalidPasswordUpdateDto, "user1");
+
+    // Assert
+    assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Passwords do not match.");
+    assertEquals(responseBody, response.getBody());
+  }
+
+  /**
+   * Tests an execution of the updatePassword method when the user is not found.
+   */
+  @Test
+  void testUpdatePasswordUserNotFound() {
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(null);
 
-    //Act
-    ResponseEntity<?> response = userService.updatePassword(passwordUpdateDto,
-        "user1");
+    // Act
+    ResponseEntity<?> response = userService.updatePassword(passwordUpdateDto, "user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("User not found.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User not found.");
+    assertEquals(responseBody, response.getBody());
   }
 
-  /***
-   * Tests a successful execution of the deleteUser method
+  /**
+   * Tests a successful execution of the deleteUser method.
    */
   @Test
-  void testDeleteUser_Success() {
-    //Arrange
+  void testDeleteUserSuccess() {
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(user1);
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
     when(userRepository.save(user1)).thenReturn(user1);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.deleteUser("user1");
+    assertEquals(HttpStatus.OK, response.getStatusCode());
 
-    //Assert
+    // Assert
     verify(userRepository, times(1)).deleteByUsername("user1");
     verify(projectRepository, times(1)).save(project);
     verify(teamRepository, times(1)).save(team);
-    verify(tagService, times(1)).deleteTag("tag1Id");
-    verify(tagService, times(1)).deleteTag("tag2Id");
-    assertEquals(HttpStatus.OK, response.getStatusCode());
-    assertEquals("User deleted successfully.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    verify(tagService, times(1)).deleteTag(tag1.getTagId());
+    verify(tagService, times(1)).deleteTag(tag2.getTagId());
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User deleted successfully.");
+    assertEquals(responseBody, response.getBody());
     assertEquals(Arrays.asList("ownerId", "user2Id"), project.getUserIds());
-    assertEquals(Arrays.asList("user2Id"), team.getUserIds());
+    assertEquals(List.of("user2Id"), team.getUserIds());
   }
 
   /**
-   * Tests an execution of the deleteUser method when the user is not authorized
+   * Tests an execution of the deleteUser method when the user is not authorized.
    */
   @Test
-  void testDeleteUser_Unauthorized() {
-    //Arrange
+  void testDeleteUserUnauthorized() {
+    // Arrange
     Authentication authentication = mock(Authentication.class);
     when(authentication.isAuthenticated()).thenReturn(true);
     when(authentication.getName()).thenReturn("otherUser");
@@ -602,39 +620,41 @@ public class UserServiceTest {
     when(securityContext.getAuthentication()).thenReturn(authentication);
     SecurityContextHolder.setContext(securityContext);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.deleteUser("user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode());
-    assertEquals("You are not authorized to delete this user.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "You are not authorized to delete this user.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests an execution of the deleteUser method when the user is not found
+   * Tests an execution of the deleteUser method when the user is not found.
    */
   @Test
-  void testDeleteUser_UserNotFound() {
-    //Arrange
+  void testDeleteUserUserNotFound() {
+    // Arrange
     when(userRepository.findByUsername("user1")).thenReturn(null);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.deleteUser("user1");
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("User not found.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User not found.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
-   * Tests a successful execution of the deleteUser method when the user is the owner of the
-   * project
+   * Tests a successful execution of the deleteUser method when the user is the owner of the 
+   * project.
    */
   @Test
-  void testDeleteUser_UserIsOwner() {
-    //Authentication
+  void testDeleteUserUserIsOwner() {
+    // Authentication
     Authentication authentication = mock(Authentication.class);
     when(authentication.isAuthenticated()).thenReturn(true);
     when(authentication.getName()).thenReturn("owner");
@@ -643,22 +663,24 @@ public class UserServiceTest {
     when(securityContext.getAuthentication()).thenReturn(authentication);
     SecurityContextHolder.setContext(securityContext);
 
-    //Arrange
+    // Arrange
     when(userRepository.findByUsername("owner")).thenReturn(owner);
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
-    when(artifactRepository.findArtifactByArtifactId("artifactId")).thenReturn(artifact);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(artifactRepository.findArtifactByArtifactId(artifact.getArtifactId()))
+        .thenReturn(artifact);
     when(userRepository.save(owner)).thenReturn(owner);
 
-    //Act
+    // Act
     ResponseEntity<?> response = userService.deleteUser("owner");
 
-    //Assert
+    // Assert
     verify(userRepository, times(1)).deleteByUsername("owner");
-    verify(projectService, times(1)).deleteProject("projectId");
+    verify(projectService, times(1)).deleteProject(project.getProjectId());
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    assertEquals("User deleted successfully.",
-        ((Map<String, Object>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User deleted successfully.");
+    assertEquals(responseBody, response.getBody());
   }
 
 }
